Add menu button styling using JS to rotate bars into X

--- a/scss/config.scss
+++ b/scss/config.scss
@@ -1,7 +1,7 @@
 $primary-color: #444;
 $secondary-color: #eece1a;
 $show-home-image: true;
-$home-image: url(../img/background3.jpg);
+$home-image: url(../img/background.jpg);
 $back-ground-opacity: 0.9;
 
 
