--- a/scss/menu.scss
+++ b/scss/menu.scss
@@ -39,3 +39,98 @@
 }
 
 }
+
+// Menu Overlay
+
+.menu {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    opacity: 0.9;
+    visibility: hidden; // make it's default not seen
+
+    &.show {
+        visibility: visible; // to show menu after clicking
+    }
+
+    &-branding, &-nav { //instead of a new .menu-branding and .menu-nav
+        display: flex;
+        flex-flow: column wrap; // make links a column
+        align-items: center;
+        justify-content: center;
+        float: left;
+        width: 50%;
+        height: 100vh; // Take up whole length
+        overflow:hidden; // No scroll bars
+    }
+
+    &-nav {
+        margin: 0;
+        padding: 0;
+        background: darken($primary-color,5);
+        list-style: none;
+        transform: translate3d(0, -100%, 0); // Push it up
+        @include easeOut;
+
+        &.show {
+            //slide in from top
+            transform: translate3d(0, 0, 0)
+        }
+    }
+
+    &-branding { //targets menu-branding class
+        background: $primary-color;
+        transform: translate3d(0, 100%, 0);
+        @include easeOut;
+
+        &.show {
+            //slide in from bottom
+            transform: translate3d(0, 0, 0);
+        }
+
+        .portrait {
+            width: 250px;
+            height: 250px;
+            background: url('../img/portrait.jpg');
+            border-radius: 50%;
+            border: solid  3px $secondary-color;
+        }
+    }
+
+    .nav-item {
+        transform: translate3d(600px, 0, 0); // move off the screen to right
+        @include easeOut;
+
+        &.show {
+            //slide in from the right
+            transform: translate3d(0, 0, 0);
+        }
+
+        &.current > a {
+            color: $secondary-color;
+        }
+    }
+
+    .nav-link {
+        display: inline-block;
+        position: relative;
+        font-size: 30px;
+        text-transform: uppercase;
+        padding: 1rem 0;
+        font-weight: 300;
+        color: #fff;
+        text-decoration: none;
+        @include easeOut;
+
+        &:hover {
+            color: $secondary-color;
+        }
+    }
+}
+
+// Delay each nav item slide by 0.1s
+@for $x from 1 through 4 { //we have four items
+    .nav-item:nth-child(#{$x}) {
+        transition-delay: $x * 0.1s; // each one comes in seperately
+    }
+}
