adds function to toggle dark and light mode

--- a/scss/config.scss
+++ b/scss/config.scss
@@ -31,6 +31,15 @@ $back-ground-opacity: 0.9;
     }
 }
 
+// Set Text color function
+@function set-text-color($color) {
+    @if (lightness($color) > 40) {
+        @return #000;
+    } @else {
+        @return #fff;
+    }
+}
+
 // Media Query Mixins
 @mixin mediaSm {
     @media screen and (max-width: 500px) {
