--- a/scss/mobile.scss
+++ b/scss/mobile.scss
@@ -47,7 +47,15 @@
         }
     }
 
-
+    .about-info {
+        grid-template-areas:
+        'bioimage'
+        'bio'
+        'job1'
+        'job2'
+        'job3';
+        grid-template-columns: 1fr;
+    }
 
 }
 
