--- a/scss/main.scss
+++ b/scss/main.scss
@@ -119,6 +119,52 @@ main {
     }
 }
 
+// Work / Projects
+.projects {
+    display: grid;
+    grid-gap: 0.7rem;
+    grid-template-columns: repeat(3, 1fr);
+
+    img {
+        width: 100%;
+        border: 3px solid #fff;
+
+        &:hover {
+            opacity: 0.5;
+            border-color: $secondary-color;
+            @include easeOut;
+        }
+    }
+}
+
+// Button styles
+.btn {
+    display: block;
+    padding: 0.5rem 1rem;
+    border: 0;
+    margin-bottom: 0.3rem;
+
+    &:hover {
+        background: $secondary-color;
+        color: set-text-color($secondary-color);
+    }
+}
+
+//extending styles in SASS
+.btn-dark { 
+    @extend .btn;
+    background: darken($primary-color, 50);
+    color: #fff;
+
+}
+
+.btn-light {
+    @extend .btn;
+    background: lighten($primary-color, 50);
+    color: #333;
+
+}
+
 #main-footer {
     text-align: center;
     padding: 1rem;
