--- a/scss/mobile.scss
+++ b/scss/mobile.scss
@@ -1,10 +1,16 @@
 // Widescreens
 @include mediaXl {
+    .projects {
+        grid-template-columns: repeat (4, 1fr);
+    }
 
 }
 
 // Desktops and Laptops
 @include mediaLg {
+    .projects {
+        grid-template-columns: repeat (3, 1fr);
+    }
     
 }
 
@@ -57,10 +63,18 @@
         grid-template-columns: 1fr;
     }
 
+    .projects {
+        grid-template-columns: repeat (2, 1fr);
+    }
+
 }
 
 @include mediaSm {
     main#home h1 {
         margin-top: 10vh;
+    }
+
+    .projects {
+        grid-template-columns: 1fr;
     }
 }
