--- a/scss/main.scss
+++ b/scss/main.scss
@@ -76,6 +76,10 @@ main {
         }
     }
 
+    &#contact {
+        min-height: calc(100vh - 60px);
+    }
+
 }
 
 .about-info {
@@ -133,6 +137,33 @@ main {
             opacity: 0.5;
             border-color: $secondary-color;
             @include easeOut;
+        }
+    }
+}
+
+// Contact Page
+.boxes {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 1rem;
+
+    div {
+        font-size: 2rem;
+        border: 2px solid #fff;
+        padding: 1.5rem 2.5rem;
+        margin-bottom: 3rem;
+        @include easeOut;
+
+        &:hover {
+            padding: 0.5rem 1.5rem;
+            background: $secondary-color;
+            color: set-text-color($secondary-color);
+
+            span {
+                color: set-text-color($secondary-color);
+            }
         }
     }
 }
