--- a/scss/main.scss
+++ b/scss/main.scss
@@ -75,6 +75,12 @@ main {
             margin-top: 20vh;
         }
     }
+    
+    &#about {
+        min-height: calc(100vh - 60px);
+    }
+
+    
 
     &#contact {
         min-height: calc(100vh - 60px);
@@ -131,6 +137,7 @@ main {
 
     img {
         width: 100%;
+        height: 400px;
         border: 3px solid #fff;
 
         &:hover {
