Fixes size of contact details

--- a/scss/mobile.scss
+++ b/scss/mobile.scss
@@ -86,4 +86,10 @@
     .projects {
         grid-template-columns: 1fr;
     }
+
+    .boxes {
+        div {
+            font-size: 1rem;
+        }
+    }
 }
