adds responsive contact box sizes

--- a/scss/mobile.scss
+++ b/scss/mobile.scss
@@ -67,6 +67,11 @@
         grid-template-columns: repeat(2, 1fr);
     }
 
+    .boxes {
+        div {
+            font-size: 1.5rem;
+        }
+    }
 }
 
 @include mediaSm {
