Add linkedin profile picture

--- a/scss/mobile.scss
+++ b/scss/mobile.scss
@@ -47,7 +47,7 @@
         transform: translate3d(100%, 0, 0); // coming in from right
         
         .portrait {
-            background: url('../img/portrait_small.jpg');
+            background: url('../img/black-portrait-small.webp');
             width: 150px;
             height: 150px;
         }
