--- a/scss/menu.scss
+++ b/scss/menu.scss
@@ -91,7 +91,7 @@
         .portrait {
             width: 250px;
             height: 250px;
-            background: url('../img/portrait.jpg');
+            background: url('../img/black-portrait-small.webp');
             border-radius: 50%;
             border: solid  3px $secondary-color;
         }
